# unicode_pyo3

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
docker/unicode_pyo3-dev/: Dockerfile  unicode_pyo3.code-workspace
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst  unicode_pyo3.config.rst  unicode_pyo3.decorators.rst  unicode_pyo3.rst
src/py/unicode_pyo3/: __init__.py
src/py/unicode_pyo3/config/: __init__.py  env.py  logger.py
src/rust/: config.rs  lib.rs  main.rs
src/rust/data/: mod.rs
src/rust/input_output/: mod.rs
src/rust/input_output/pickle/: mod.rs  traits.rs
src/rust/input_output/stdin/: mod.rs
src/rust/input_output/stdout/: mod.rs
src/rust/segmentation/: mod.rs
tests/: conftest.py  mod.rs  test_env.py
