[package]
name = "unicode_pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_unicode_pyo3"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[features]
default = [ "numpy", "polars" ]
numpy = [ "dep:ndarray", "dep:numpy" ]
polars = [ "dep:polars", "dep:pyo3-polars" ]

[dependencies]
lazy_static = { version = "1" }
pyo3 = { version = "0", features = ["extension-module"] }
rayon = { version = "1" }
unicode-segmentation = { version = "1" }

ndarray = { version = "0", optional = true, features = ["rayon"] }
numpy = { version = "0", optional = true }

polars = { version = "0", optional = true, features = ["lazy"] }
pyo3-polars = { version = "0", optional = true }

[package.metadata.maturin]
python-source = "src/py"
name = "unicode_pyo3.lib_unicode_pyo3"
